2004-09-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c:
	Include sys/vfstab.h if found (#152115)
	Patch from danek.duvall@sun.com.
	
2004-09-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c:
	Make stating actually work (#152114). Patch from danek.duvall@sun.com.

2004-09-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	Cache global default lookups, to avoid re-reading and validating desktop files.
	Blow away global cache if any directory changes.
	Don't validate all desktop entries in the mime cache. Instead validate when used.
	Don't limit defaults.list to reference desktop files from the same
	directory. This means user defaults.list now works.
	Lock mime_info_cache when getting file monitor callbacks.
	separate mime.cache and defaults.list file change handling
	Don't leak mime_info_cache on reload.
	Remove defaults.list-only dirs.
	
2004-09-20  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c (gnome_vfs_mime_info_cache_get_search_path) 
	(gnome_vfs_mime_info_cache_get_defaults_search_path):
	Don't reorder search paths.

2004-09-16  JP Rosevear  <jpr@novell.com>

	* modules/ftp-method.c (ftp_kerberos_login): use
	GSS_C_NT_HOSTBASED_SERVICE always, since we define it if it
	doesn't exist in configure.in (fixes heimdal)
	(ftp_connection_destroy): use GSS_C_NO_CONTEXT define instead of
	NULL and pass a pointer to the context rather than the context
	itself which is what gss_delete_sec_context wants

2004-09-16  Christophe Fergeau  <teuf@gnome.org>

	* doc/*: more API doc updates

2004-09-16  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-drive.h:
	* libgnomevfs/gnome-vfs-volume-monitor.c:
	* doc/tmpl/gnome-vfs-drive.sgml: API doc updates

2004-09-16  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/xdgmimeglob.c:
	* libgnomevfs/xdgmimemagic.c: fix memleaks (sync with upstream),
	  fixes #152768 and #152771
